--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,10 @@ a.article:hover {
   color: #fff !important;
 }
 
+.pl5 {
+  padding-left: 50px !important;
+}
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
