--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,10 @@ a.article:hover {
   padding-left: 50px !important;
 }
 
+.mauxanh {
+  background-color: #80FFFF !important;
+}
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
