--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,8 @@ a[data-toggle="collapse"] {
   transform: translateY(-50%);
 }
 
+
+
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
@@ -172,6 +174,10 @@ a.article:hover {
 
 .mauxanh {
   background-color: #80FFFF !important;
+}
+
+.menucon {
+  padding-left: 40px !important;
 }
 
 /* ---------------------------------------------------
